# vampire-are-not-survivors

./: Cargo.toml
src/: main.rs
src/animation/: mod.rs
src/camera/: mod.rs
src/general/: cursor_pos.rs  damage_timer.rs  health.rs  mod.rs  sheets_holder.rs
src/monster/: bundles.rs  damage.rs  mod.rs  monster_type.rs  movement.rs  resources.rs
src/player/: attack.rs  healthbar.rs  mod.rs  movement.rs
src/projectiles/: mod.rs
