[package]
name = "vampire_are_not_survivors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.13.2", features = ["dynamic_linking"]}
bevy_asset_loader = {version = "0.20.1", features = ["2d"]}
rand = "0.8.5"
bevy_xpbd_2d = "0.4"
bevy-inspector-egui = "0.24.0"
